# shhhh

./: .gitignore  .stylelintrc.json  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  backend.ts  config.ts  main.tsx  post.css  post.tsx  utils.ts  variables.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/2025-07-14-191817_create_posts/: up.sql
src-tauri/migrations/2025-07-30-192246_post_likes/: down.sql  up.sql
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs  models.rs  post_repository.rs  schema.rs
src/Components/AutoHeightTextArea/: AutoHeightTextArea.tsx
src/Components/Button/: Button.css  Button.tsx
src/Components/MoreMenu/: moreMenu.css  moreMenu.tsx
src/Components/Post/: post.css  post.tsx
src/Components/PostFeed/: PostFeed.css  PostFeed.tsx
src/Components/PostModal/: EditPostModal.css  EditPostModal.tsx
src/Components/SearchBar/: SearchBar.css  SearchBar.tsx
src/Hooks/: usePosts.ts
src/Pages/: FeedView.css  FeedView.tsx  Home.css  Home.tsx  Post.css  Post.tsx  Search.tsx
src/Pages/Profile/: Profile.css  Profile.tsx
src/Types/: Post.ts  ProfileUpdateData.ts
