[package]
name = "shhhh"
version = "0.1.0"
description = ""
authors = ["you"]
edition = "2021"


[lib]
name = "shhhh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
