[package]
name = "shhhh"
version = "0.1.0"
description = ""
authors = ["you"]
edition = "2021"


[lib]
name = "shhhh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
    "serde_json",
] }

# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
chrono = "0.4.41"
[dependencies.uuid]
version = "1.17.0"
# Lets you generate random UUIDs
features = ["v4"]
[profile.dev]
debug = 0
